update some function
